Retirando a utilizacao de método depreciado